<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorDarkPrimary"
    android:paddingHorizontal="15dp"
    android:paddingVertical="20dp"
    >
    <LinearLayout
        style="@style/paymentLinearLayoutStyle"
        android:gravity="center"
        android:layout_weight="3">
        <ImageView
            android:id="@+id/imgMovie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/avenger_movies"/>
    </LinearLayout>

    <LinearLayout
        style="@style/paymentLinearLayoutStyle"
        android:layout_weight="6"
        android:orientation="vertical"
        android:weightSum="10">

        <TextView
            android:id="@+id/txtTicketName"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:textSize="@dimen/txtTitleItem"
            android:textColor="@color/colorWhite"
            android:text="@string/lblTitleMovies"
            android:layout_weight="1.5" />

        <LinearLayout
            style="@style/paymentLinearLayoutStyle"
            android:orientation="horizontal"
            android:weightSum="12"
            android:gravity="center"
            android:layout_weight="1" >
            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingHorizontal="5dp"
                android:src="@drawable/purple_calendar" />
            <TextView
                android:id="@+id/txtTicketDate"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:gravity="center"
                android:text="May 10 - 2020"
                android:textColor="@color/colorWhite" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingHorizontal="5dp"
                android:src="@drawable/purple_clock" />

            <TextView
                android:id="@+id/txtTicketTime"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2.5"
                android:gravity="center"
                android:text="3 : 02"
                android:textColor="@color/colorWhite" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingHorizontal="5dp"
                android:src="@drawable/purple_ticket_icon" />

            <TextView
                android:id="@+id/txtTicketAmount"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:gravity="center"
                android:text="2"
                android:textColor="@color/colorWhite" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:weightSum="5.5"
            android:layout_weight="6" >
            <TextView
                android:id="@+id/txtAddress"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:gravity="center_vertical"
                android:textSize="15dp"
                android:textColor="@color/colorWhite"
                android:text="Address: 5th Floor, Vincom Thu Duc Shopping Mall, 216 Vo Van Ngan, Binh Tho Ward, Thu Duc District ( Room 5 )"
                android:layout_weight="1.5"/>
            <TextView
                android:id="@+id/ticketOrderTime"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="Order time: 12:26:18 27/07/2020"
                android:layout_weight="0.5"
                android:gravity="right"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:textColor="@color/colorPayment"
                android:textSize="19dp"
                android:text="@string/lblCustomerInf"
                android:layout_weight="0.75"/>
            <LinearLayout
                style="@style/paymentLinearLayoutStyle"
                android:orientation="vertical"
                android:layout_weight="2.75">
                <LinearLayout
                    style="@style/paymentLinearLayoutStyle"
                    android:layout_weight="1.2"
                    android:weightSum="7"
                    android:orientation="horizontal">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:gravity="left|center"
                            android:textSize="15dp"
                            android:textColor="@color/colorWhite"
                            android:text="@string/lblFullname"
                            android:layout_weight="1.5"/>
                        <EditText
                            android:id="@+id/edtCustomerName"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:textColor="@color/colorWhite"
                            android:inputType="text"
                            android:paddingLeft="10dp"
                            android:textColorHint="@color/colorWhite"
                            android:hint="@string/hintFullName"
                            android:layout_weight="5.5"/>
                </LinearLayout>
                <LinearLayout
                    style="@style/paymentLinearLayoutStyle"
                    android:layout_weight="1.2"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:gravity="left|center"
                        android:textSize="15dp"
                        android:textColor="@color/colorWhite"
                        android:text="@string/lblPhone"
                        android:layout_weight="1.5"/>
                    <EditText
                        android:id="@+id/edtCustomerPhone"
                        android:layout_width="0dp"
                        android:inputType="number"
                        android:maxLength="10"
                        android:layout_height="match_parent"
                        android:textColor="@color/colorWhite"
                        android:textColorHint="@color/colorWhite"
                        android:paddingLeft="10dp"
                        android:hint="@string/hintPhone"
                        android:layout_weight="5.5"/>
                </LinearLayout>
                <TextView
                    android:id="@+id/txtCustomerAlert"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:visibility="invisible"
                    android:gravity="center"
                    android:textSize="11dp"
                    android:text="@string/txtAlertInfo"
                    android:textColor="@color/colorRed"
                    android:layout_weight="0.35"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            style="@style/paymentLinearLayoutStyle"
            android:layout_weight="0.75"
            android:weightSum="3"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="left|center"
                android:textSize="20dp"
                android:textColor="@color/colorWhite"
                android:text="@string/price"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/txtTicketPrice"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="left|center"
                android:textColor="@color/colorPrice"
                android:textSize="20dp"
                android:text="50000 vnđ"
                android:layout_weight="2"/>
        </LinearLayout>

        <LinearLayout
            style="@style/paymentLinearLayoutStyle"
            android:layout_weight="0.75" >
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="left|center"
                android:textSize="20dp"
                android:textColor="@color/colorWhite"
                android:text="@string/totalPrice"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/txtTicketTotalPrice"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="left|center"
                android:textColor="@color/colorPrice"
                android:textSize="20dp"
                android:text="100000 vnđ"
                android:layout_weight="2"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        style="@style/paymentLinearLayoutStyle"
        android:orientation="horizontal"
        android:weightSum="5"
        android:layout_weight="0.75">
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginRight="15dp"
            android:background="@color/colorDarkSecondary"
            android:textColor="@color/colorWhite"
            android:text="Back"
            android:id="@+id/btnBackConfirm"/>

        <Button
            android:id="@+id/btnConfirmTickets"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:background="@drawable/gradient_purple_color"
            android:textColor="@color/colorWhite"
            android:text="@string/btnTicket"/>
    </LinearLayout>
</LinearLayout>